# rpaforge

./: .gitignore  AGENTS.md  CONTRIBUTING.md  CONTRIBUTING.ru.md  HOWTO-TRANSLATE.md  Makefile  README.de.md  README.es.md  README.md  README.ru.md  ROADMAP.md  package.json  pyproject.toml  requirements-dev.txt
.github/: dependabot.yml
.github/ISSUE_TEMPLATE/: developer-tasks.md
.github/workflows/: ci.yml  codeql.yml  docs.yml  release.yml  security-audit.yml  tests.yml
.rpaforge_checkpoints/: cp_1_20260514_000019.json  cp_1_20260522_000843.json
docs/: index.ru.md
docs/developer-guide/: architecture.md
docs/getting-started/: installation.ru.md  quick-start.ru.md
docs/libraries/: credentials.md  database.md  dataframes.md  datetime.md  desktopui.md  excel.md  file.md  flow.md  http.md  index.md  ocr.md  spy.md  string.md  variables.md  webui.md
docs/troubleshooting/: common-issues.md  common-issues.ru.md
