[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "rpaforge"
version = "0.1.0.dev1"
description = "Open Source RPA Studio - Native Python execution engine"
readme = "README.md"
license = {text = "Apache-2.0"}
requires-python = ">=3.10"
authors = [
    {name = "RPAForge Contributors"}
]
maintainers = [
    {name = "RPAForge Team"}
]
keywords = [
    "rpa",
    "automation",
    "desktop-automation",
    "web-automation",
    "workflow",
    "orchestration"
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Testing",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Office/Business :: Financial",
    "Typing :: Typed",
]
dependencies = [
    "psutil>=5.9.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "pytest-asyncio>=0.21",
    "ruff>=0.1.0",
    "mypy>=1.0",
    "pre-commit>=3.0",
    "invoke>=2.0",
]
docs = [
    "mkdocs>=1.5",
    "mkdocs-material>=9.0",
    "mkdocstrings[python]>=0.23",
    "mike>=1.1",
]
desktop = [
    "pywinauto>=0.6.8",
    "uiautomation>=2.0",
]
web = [
    "playwright>=1.40",
]
ocr = [
    "pytesseract>=0.3.10",
    "easyocr>=1.7",
    "pillow>=10.0",
]
excel = [
    "openpyxl>=3.1",
    "xlwings>=0.30",
]
database = [
    "sqlalchemy>=2.0",
]
all = [
    "rpaforge[desktop,web,ocr,excel,database]",
]

[project.urls]
Homepage = "https://github.com/chelslava/rpaforge"
Documentation = "https://chelslava.github.io/rpaforge"
Repository = "https://github.com/chelslava/rpaforge.git"
Issues = "https://github.com/chelslava/rpaforge/issues"
Changelog = "https://github.com/chelslava/rpaforge/blob/main/CHANGELOG.md"

[project.scripts]
rpaforge = "rpaforge.cli:main"

[tool.setuptools.packages.find]
where = ["packages/core/src", "packages/libraries/src"]

[tool.ruff]
target-version = "py310"
line-length = 88

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # pyflakes
    "I",      # isort
    "B",      # flake8-bugbear
    "C4",     # flake8-comprehensions
    "UP",     # pyupgrade
    "ARG",    # flake8-unused-arguments
    "SIM",    # flake8-simplify
]
ignore = [
    "E501",   # line too long (handled by black)
    "B008",   # do not perform function calls in argument defaults
    "SIM117", # nested with statements (allowed in tests)
    "ARG001", # unused function arguments (allowed in tests)
]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["ARG001", "SIM117", "F841"]

[tool.ruff.lint.isort]
known-first-party = ["rpaforge", "rpaforge_libraries"]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
strict_optional = true

[[tool.mypy.overrides]]
module = ["pywinauto.*", "playwright.*"]
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["packages/core/tests", "packages/libraries/tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
addopts = "-v --tb=short"
asyncio_mode = "auto"
